Enable prometheus ingress
Path not working

--- a/remla23-team10-restaurant/values.yaml
+++ b/remla23-team10-restaurant/values.yaml
@@ -40,3 +40,21 @@ ingress:
   name: app-ingress
 
 deploy-prom-stack: true
+
+# Prometheus stack config
+kube-prometheus-stack:
+
+  # Main prometheus configuration
+  prometheus:
+    # Enable ingress and set path to prometheus
+    ingress:
+      enabled: true
+      paths:
+        - /prometheus
+    
+  # Similar configuration should exist for grafana
+  # grafana:
+  #   ingress:
+  #     enabled: true
+  #     paths:
+  #       - /grafana
