--- a/remla23-team10-restaurant/values.yaml
+++ b/remla23-team10-restaurant/values.yaml
@@ -40,7 +40,31 @@ ingress:
 
 deploy-prom-stack: true
 
+# alertmanager config
+alertConfig:
+  severity: warning # minimum level of severity for notification
+
+# Email configurations. Example using gmail
+  emails:
+    - name: enriquebarba97              # name of the config
+      to: user@gmail.com                # email to send notifications to
+      from: reveiver@example.com        # email to send notifications from
+      smtp: smtp.gmail.com:587          # smtp server and port
+      username: user@gmail.com          # identity for smtp server
+      password: "CHANGE-ME"             # password for smtp server
+      # See https://support.google.com/accounts/answer/185833?hl=en for more info on Gmail app passwords
+
 kube-prometheus-stack:
+  alertmanager:
+    config:
+      global:
+        resolve_timeout: 1m
+        # Default smpt server. Ideally same as one of the configs above, but it does not matter
+        # since it will use the values from the config.
+        # However, the alertmanager refuses to start if there is at least an email config
+        # and not a global default smtp server. https://github.com/prometheus/alertmanager/issues/275
+        smtp_smarthost: smtp.gmail.com:587
+
   grafana:
     env:
       GF_SERVER_ROOT_URL: https://localhost:3000/grafana
