Change virtualservice.yaml to redirect traffic to v1 standard unless "x-user-version" header with value "v0" is given

--- a/remla23-team10-restaurant/templates/virtualservice.yaml
+++ b/remla23-team10-restaurant/templates/virtualservice.yaml
@@ -9,14 +9,17 @@ spec:
     - "*"
   http:
     - match:
+        - headers:
+            x-user-version:
+              exact: "v0"
+      route:
+        - destination:
+            host: {{$.Values.services.webapp.name}}
+            subset: v0
+    - match:
         - uri:
             prefix: /
       route:
         - destination:
             host:  {{$.Values.services.webapp.name}}
             subset: v1
-          weight: 90
-        - destination:
-            host: {{$.Values.services.webapp.name}}
-            subset: v0
-          weight: 10
