--- a/remla23-team10-restaurant/templates/virtualservice.yaml
+++ b/remla23-team10-restaurant/templates/virtualservice.yaml
@@ -9,6 +9,22 @@ spec:
     - "*"
   http:
     - match:
+        - uri:
+            prefix: /prometheus
+      route:
+        - destination:
+            host: {{.Release.Name}}-kube-prometheus-stac-prometheus
+            port:
+              number: 9090
+    - match:
+        - uri:
+            prefix: /grafana
+      route:
+        - destination:
+            host: {{.Release.Name}}-grafana
+            port:
+              number: 80
+    - match:
         - headers:
             x-user-version:
               exact: "v0"
@@ -21,5 +37,5 @@ spec:
             prefix: /
       route:
         - destination:
-            host:  {{$.Values.services.webapp.name}}
+            host: {{$.Values.services.webapp.name}}
             subset: v1
