Extract model service URLs to env variables

--- a/remla23-team10-restaurant/templates/deployment.yaml
+++ b/remla23-team10-restaurant/templates/deployment.yaml
@@ -43,4 +43,9 @@ spec:
           image: "{{ .repository }}:{{ .tag }}"
           ports:
             - containerPort: {{.port}}
+          env:
+            - name: CLASSIFIER_URL
+              value: "{{ .classifierUrl }}"
+            - name: VECTORIZER_URL
+              value: "{{ .vectorizerUrl }}"
 {{- end }}
