--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,8 @@ services:
   
   model-service:
     image: ghcr.io/remla23-team10/model-service
+    environment:
+      - CLASSIFIER_URL=https://github.com/remla23-team10/model-training/raw/f3325ef89c0245cc94fdcadcecee45e9b8a560b7/models/Classifier_Sentiment_Model.joblib
+      - VECTORIZER_URL=https://github.com/remla23-team10/model-training/raw/f3325ef89c0245cc94fdcadcecee45e9b8a560b7/data/processed/BoW_Vectorizer.joblib
     ports:
       - 8081:8080
