--- a/remla23-team10-restaurant/values.yaml
+++ b/remla23-team10-restaurant/values.yaml
@@ -18,6 +18,8 @@ deployments:
     selectorLabel: modelservice
     repository: ghcr.io/remla23-team10/model-service
     tag: latest
+    classifierUrl: https://github.com/remla23-team10/model-training/raw/f3325ef89c0245cc94fdcadcecee45e9b8a560b7/models/Classifier_Sentiment_Model.joblib
+    vectorizerUrl: https://github.com/remla23-team10/model-training/raw/f3325ef89c0245cc94fdcadcecee45e9b8a560b7/data/processed/BoW_Vectorizer.joblib
     port: 8080
 
 services:
