--- a/remla23-team10-restaurant/values.yaml
+++ b/remla23-team10-restaurant/values.yaml
@@ -9,7 +9,8 @@ deployments:
     podname: app
     selectorLabel: app
     repository: ghcr.io/remla23-team10/app
-    tag: latest
+    tag: 1.2.1
+    tagCE: 1.3.0
     port: 8080
 
   modelService:
@@ -17,7 +18,8 @@ deployments:
     podname: modelservice
     selectorLabel: modelservice
     repository: ghcr.io/remla23-team10/model-service
-    tag: latest
+    tag: 1.1.0
+    tagCE: 1.2.1
     classifierUrl: https://github.com/remla23-team10/model-training/raw/f3325ef89c0245cc94fdcadcecee45e9b8a560b7/models/Classifier_Sentiment_Model.joblib
     vectorizerUrl: https://github.com/remla23-team10/model-training/raw/f3325ef89c0245cc94fdcadcecee45e9b8a560b7/data/processed/BoW_Vectorizer.joblib
     port: 8080
