--- a/remla23-team10-restaurant/values.yaml
+++ b/remla23-team10-restaurant/values.yaml
@@ -9,8 +9,11 @@ deployments:
     podname: app
     selectorLabel: app
     repository: ghcr.io/remla23-team10/app
-    tag: 1.2.1
-    tagCE: 1.3.0
+    tags:
+      - tag: 1.2.1
+        version: v0
+      - tag: 1.3.0 # tagCE
+        version: v1
     port: 8080
 
   modelService:
@@ -18,8 +21,11 @@ deployments:
     podname: modelservice
     selectorLabel: modelservice
     repository: ghcr.io/remla23-team10/model-service
-    tag: 1.1.0
-    tagCE: 1.2.1
+    tags:
+      - tag: 1.1.0
+        version: v0
+      - tag: 1.2.1 # tagCE
+        version: v1
     classifierUrl: https://github.com/remla23-team10/model-training/raw/f3325ef89c0245cc94fdcadcecee45e9b8a560b7/models/Classifier_Sentiment_Model.joblib
     vectorizerUrl: https://github.com/remla23-team10/model-training/raw/f3325ef89c0245cc94fdcadcecee45e9b8a560b7/data/processed/BoW_Vectorizer.joblib
     port: 8080
