--- a/remla23-team10-restaurant/templates/deployment.yaml
+++ b/remla23-team10-restaurant/templates/deployment.yaml
@@ -17,6 +17,10 @@ spec:
         app: {{ $webapp.selectorLabel }}
         version: {{ $tag.version }}
         sidecar.istio.io/inject: "true"
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/path: "/actuator/prometheus"
+        prometheus.io/port: "8080"
     spec:
       containers:
         - name: {{ $webapp.podname }}
