--- a/remla23-team10-restaurant/templates/secrets.yaml
+++ b/remla23-team10-restaurant/templates/secrets.yaml
@@ -1,8 +1,10 @@
+{{if .Values.prometheus.enabled}}
 apiVersion: v1
 kind: Secret
 metadata:
   name: smtp-secrets
 data:
-  {{- range .Values.alertConfig.emails }}
+  {{- range .Values.prometheus.alertConfig.emails }}
   {{ .name }}: {{ .password | b64enc }}
   {{- end }}
+{{end}}
