--- a/remla23-team10-restaurant/templates/service-monitor.yaml
+++ b/remla23-team10-restaurant/templates/service-monitor.yaml
@@ -1,3 +1,4 @@
+{{if .Values.prometheus.enabled}}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
@@ -11,3 +12,4 @@ spec:
   endpoints:
   - interval: {{.Values.serviceMonitor.interval }}
     path: /actuator/prometheus
+{{end}}
