--- a/remla23-team10-restaurant/templates/virtualservice.yaml
+++ b/remla23-team10-restaurant/templates/virtualservice.yaml
@@ -1,3 +1,4 @@
+{{if .Values.istio.enabled}}
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
@@ -8,6 +9,7 @@ spec:
   hosts:
     - "*"
   http:
+    {{if .Values.prometheus.enabled}}
     - match:
         - uri:
             prefix: /prometheus
@@ -16,7 +18,8 @@ spec:
             host: {{.Release.Name}}-kube-prometheus-stac-prometheus
             port:
               number: 9090
-
+    {{end}}
+    {{if .Values.grafana.enabled}}
     - match:
         - uri:
             prefix: /grafana
@@ -25,7 +28,7 @@ spec:
             host: {{.Release.Name}}-grafana
             port:
               number: 80
-
+      {{end}}
     - match:
         - headers:
             cookie:
@@ -84,3 +87,4 @@ spec:
     - destination:
         host: {{$.Values.services.modelService.name}}
         subset: v0
+{{end}}
