add version label to prometheus metrics

--- a/remla23-team10-restaurant/templates/service-monitor.yaml
+++ b/remla23-team10-restaurant/templates/service-monitor.yaml
@@ -11,3 +11,5 @@ spec:
   endpoints:
   - interval: {{.Values.serviceMonitor.interval }}
     path: /actuator/prometheus
+  podTargetLabels:
+    - version
